update hero header margins. fix nav-menu alignment

--- a/sass/navbar.scss
+++ b/sass/navbar.scss
@@ -193,7 +193,7 @@ nav-menu button.nav-menu-item, {
         position: absolute;
         float: right;
         width: 320px;
-        margin-left: -256px;
+        margin-left: -258px;
         max-width: 320px;
         left: inherit;
     }
