--- a/sass/panel.scss
+++ b/sass/panel.scss
@@ -16,6 +16,8 @@
 .panel.hero h2,
 .panel.hero h3, {
     font-size: 3.6em;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .panel.lg {
